2017 and refactoring