@@ -1,6 +1,6 @@
 package aoc.aoc2018;
 
-import aoc.Position;
+import aoc.common.Position;
 import lombok.AllArgsConstructor;
 import lombok.Data;
 import lombok.extern.slf4j.Slf4j;
@@ -8,44 +8,9 @@ import lombok.extern.slf4j.Slf4j;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
-
-@Data
-@AllArgsConstructor
-class Track {
-    Position position;
-    char track;
-}
-
-enum Turn {Left, Straight, Right}
-
-@Data
-@AllArgsConstructor
-@Slf4j
-class Cart implements Comparable<Cart> {
-    int serial;
-    Position position;
-    char direction;
-    Turn nextTurn;
-
-    public int compareTo(Cart c) {
-        if (position.getX() < c.getPosition().getX()) {
-            return -1;
-        } else if (position.getX() > c.getPosition().getX()) {
-            return 1;
-        } else if (position.getY() < c.getPosition().getY()) {
-            return -1;
-        } else if (position.getY() > c.getPosition().getY()) {
-            return 1;
-        } else {
-            log.error("Comparison on same position: " + c);
-            return 0;
-        }
-    }
-}
 
 @Slf4j
-class Day13MineCartMadness {
+public class Day13MineCartMadness {
     private final List<Track> tracks = new ArrayList<>();
     private final List<Cart> carts = new ArrayList<>();
 
@@ -54,8 +19,7 @@ class Day13MineCartMadness {
     }
 
     private void readMap(String input) {
-        List<String> inputStrings = Arrays.stream(input.split("\\n+"))
-                .collect(Collectors.toList());
+        List<String> inputStrings = Arrays.stream(input.split("\\n+")).toList();
 
         int xSize = 0;
         int ySize = inputStrings.size();
@@ -90,22 +54,13 @@ class Day13MineCartMadness {
     }
 
     private void moveCart(Cart cart) {
-
         // First move the cart one step forward
         //log.info("Moving cart: " + cart);
         switch (cart.getDirection()) {
-            case '^':
-                cart.getPosition().setY(cart.getPosition().getY() - 1);
-                break;
-            case 'v':
-                cart.getPosition().setY(cart.getPosition().getY() + 1);
-                break;
-            case '<':
-                cart.getPosition().setX(cart.getPosition().getX() - 1);
-                break;
-            case '>':
-                cart.getPosition().setX(cart.getPosition().getX() + 1);
-                break;
+            case '^' -> cart.getPosition().setY(cart.getPosition().getY() - 1);
+            case 'v' -> cart.getPosition().setY(cart.getPosition().getY() + 1);
+            case '<' -> cart.getPosition().setX(cart.getPosition().getX() - 1);
+            case '>' -> cart.getPosition().setX(cart.getPosition().getX() + 1);
         }
         //log.info("Moved cart: " + cart);
 
@@ -146,45 +101,23 @@ class Day13MineCartMadness {
                 break;
             case '/':
                 switch (cart.getDirection()) {
-                    case '<':
-                        cart.setDirection('v');
-                        break;
-                    case '>':
-                        cart.setDirection('^');
-                        break;
-                    case '^':
-                        cart.setDirection('>');
-                        break;
-                    case 'v':
-                        cart.setDirection('<');
-                        break;
-                    default:
-                        log.error("Illegal track for cart " + cart);
-                        break;
+                    case '<' -> cart.setDirection('v');
+                    case '>' -> cart.setDirection('^');
+                    case '^' -> cart.setDirection('>');
+                    case 'v' -> cart.setDirection('<');
+                    default -> log.error("Illegal track for cart " + cart);
                 }
                 break;
             case '\\':
                 switch (cart.getDirection()) {
-                    case '<':
-                        cart.setDirection('^');
-                        break;
-                    case '>':
-                        cart.setDirection('v');
-                        break;
-                    case '^':
-                        cart.setDirection('<');
-                        break;
-                    case 'v':
-                        cart.setDirection('>');
-                        break;
-                    default:
-                        log.error("Illegal track for cart " + cart);
-                        break;
+                    case '<' -> cart.setDirection('^');
+                    case '>' -> cart.setDirection('v');
+                    case '^' -> cart.setDirection('<');
+                    case 'v' -> cart.setDirection('>');
+                    default -> log.error("Illegal track for cart " + cart);
                 }
                 break;
-
         }
-
     }
 
     private Position checkForCollision(Cart cart) {
@@ -202,7 +135,7 @@ class Day13MineCartMadness {
         while (collision == null) {
             //log.info("Moving carts, tick: " + ticks);
 
-            for (Cart cart : carts.stream().sorted().collect(Collectors.toList())) {
+            for (Cart cart : carts.stream().sorted().toList()) {
                 //log.info("Moving cart: " + cart);
                 moveCart(cart);
                 collision = checkForCollision(cart);
@@ -226,7 +159,7 @@ class Day13MineCartMadness {
         while (carts.size() > 1) {
             //log.info("Moving " + carts.size() + " carts, tick: " + ticks);
 
-            for (Cart cart : carts.stream().sorted().collect(Collectors.toList())) {
+            for (Cart cart : carts.stream().sorted().toList()) {
                 //log.info("Moving cart: " + cart);
                 moveCart(cart);
                 collision = checkForCollision(cart);
@@ -239,4 +172,38 @@ class Day13MineCartMadness {
         }
         return carts.get(0).getPosition();
     }
+
+    enum Turn {Left, Straight, Right}
+
+    @Data
+    @AllArgsConstructor
+    static class Track {
+        Position position;
+        char track;
+    }
+
+    @Data
+    @AllArgsConstructor
+    static class Cart implements Comparable<Cart> {
+        int serial;
+        Position position;
+        char direction;
+        Turn nextTurn;
+
+        public int compareTo(Cart c) {
+            if (position.getX() < c.getPosition().getX()) {
+                return -1;
+            } else if (position.getX() > c.getPosition().getX()) {
+                return 1;
+            } else if (position.getY() < c.getPosition().getY()) {
+                return -1;
+            } else if (position.getY() > c.getPosition().getY()) {
+                return 1;
+            } else {
+                log.error("Comparison on same position: " + c);
+                return 0;
+            }
+        }
+    }
+
 }
