@@ -1,13 +1,12 @@
 package aoc.aoc2018;
 
-import aoc.Position;
+import aoc.common.Position;
 import org.apache.commons.lang3.StringUtils;
 
 import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 public class Day17ReservoirResearch {
 
@@ -20,8 +19,7 @@ public class Day17ReservoirResearch {
     private int maxY = Integer.MIN_VALUE;
 
     private void readData(String input) {
-        List<String> inputStrings = Arrays.stream(input.split("\\r\\n+"))
-                .collect(Collectors.toList());
+        List<String> inputStrings = Arrays.stream(input.split("\\r\\n+")).toList();
         // x=495, y=2..7
         for (String row : inputStrings) {
             if (row.startsWith("x")) {
@@ -89,11 +87,11 @@ public class Day17ReservoirResearch {
     int numberOfWaterTiles(String input) {
         readData(input);
         // Put the well right over minY (otherwise water inbetween should be skipped)
-        running.add(new Position(500,minY-1));
+        running.add(new Position(500, minY - 1));
         int lastNumberOfRunningWater = 0;
         int lastNumberOfStillWater = 0;
 
-        while (running.size() != lastNumberOfRunningWater || still.size() !=lastNumberOfStillWater) {
+        while (running.size() != lastNumberOfRunningWater || still.size() != lastNumberOfStillWater) {
             lastNumberOfRunningWater = running.size();
             lastNumberOfStillWater = still.size();
             //System.out.println("Iterating - running: " + running.size() + ", still: " + still.size());
